Java 8 to Java 17 Migration changes
- Replace call to newInstance() with getDeclaredConstructor().newInstance() in
ApplitoolsEyesWeb and ApplitoolsEyesMobile java classes and
add required exceptions
- Replace deprecated new Boolean(EYE_ENABLE) constructor
with parseBoolean(EYE_ENABLE) method of Boolean class in ApplitoolsEyesUtils
- Remove @SuppressWarnings which are not required